# detection-projects

./: .gitignore  README.md  example_env.txt
example_notebooks/: download_dataset.ipynb  extract_annotation_crops.ipynb  labelbox_mal.ipynb  train_model.ipynb
koger_detection/: pyproject.toml
koger_detection/koger_detection/labelbox/: annotations.py  coco.py
koger_detection/koger_detection/landscape/: drone_movement.py  mapping_functions.py
koger_detection/koger_detection/obj_det/: augmentors.py  engine.py  evaluate.py  models.py  mydatasets.py  predictors.py
koger_detection/koger_detection/obj_det/tracktor/: frcnn_fpn_custom.py  tracker_custom.py
koger_detection/koger_detection/torchvision_reference/: coco_eval.py  coco_utils.py  engine.py  readme.txt  transforms.py  utils.py
koger_detection/koger_detection/utils/: box_coco_utils.py  dataset.py  json.py  lr_scheduler.py  video.py
